--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,8 @@
 .cover__subtitle {
+  margin-top: 16px;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
   text-align: center;
   font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
@@ -7,18 +11,14 @@
   font-size: 14px;
   line-height: 1.14;
   width: 288px;
-  min-height: 48px;
-  margin-top: 16px;
-  margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
   .cover__subtitle {
+    margin-top: 32px;
+    width: 360px;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.22;
-    margin-top: 32px;
-    width: 360px;
-    height: 66px;
   }
 }
