--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,6 @@
 .header__lang-link {
+  margin: 0;
+  padding: 0;
   font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -6,6 +8,10 @@
   line-height: 1.11;
   color: #fff;
   text-decoration-line: none;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 @media screen and (min-width: 576px) {
