--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -2,9 +2,7 @@
   display: grid;
   grid-template-columns: 22px 22px;
   column-gap: 18px;
-  position: absolute;
-  bottom: 0;
-  right: 0; 
+  align-items: end;
 }
 
 @media screen and (min-width: 768px) {
