--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,16 +1,21 @@
 .header {
   display: flex;
-  margin: 0 auto;
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
   justify-content: space-between;
   position: relative;
   min-width: 288px;
   width: 90%;
   height: 100%;
+  
 }
 
 @media screen and (min-width: 768px) {
   .header {
     min-width: 720px;
+    margin-top: 28px;
   }
 }
 
