--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,4 +1,4 @@
-.places__description {
+.place__description {
   box-sizing: border-box;
   margin: 0;
   padding-top: 0;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .places__description {
+  .place__description {
     padding: 0;
   }
 }
