--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,4 @@
-.places__image {
+.place__image {
   margin: 0 auto;
   padding: 0;
   width: 320px;
@@ -6,21 +6,21 @@
 }
 
 @media screen and (min-width: 768px) {
-  .places__image {
+  .place__image {
     min-width: 340px;
     min-height: 340px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .places__image {
+  .place__image {
     width: 440px;
     height: 440px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .places__image {
+  .place__image {
     width: 460px;
     height: 460px;
   }
