--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,8 +1,15 @@
-.places__website {
+.place__link {
   margin: 0;
   padding: 0;
   font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
+  font-size: 18px;
+  line-height: 1.22;
   color: #FFFFFF;
+  text-decoration-line: underline;
+}
+
+.place__link:hover {
+  opacity: .8;
 }
