--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,4 +1,4 @@
-.places__paragraph {
+.place__paragraph {
   margin: 0;
   padding: 0;
   font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .places__paragraph {
+  .place__paragraph {
     font-size: 18px;
   }
 }
