--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,4 @@
-.places__title {
+.place__title {
   box-sizing: border-box;
   margin: 0;
   padding-top: 0;
@@ -13,7 +13,18 @@
 }
 
 @media screen and (min-width: 768px) {
-  .places__title {
+  .place__title {
     padding: 0;
+    font-weight: 900;
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__title {
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 1.06;
   }
 }
