--- a/blocks/place/__website-item/place__website-item.css
+++ b/blocks/place/__website-item/place__website-item.css
@@ -1,4 +1,4 @@
-.places__website-item {
+.place__website-item {
   box-sizing: border-box;
   margin: 0;
   padding-top: 0;
@@ -8,10 +8,11 @@
   display: flex;
   flex-direction: column;
   row-gap: 12px;
+  align-self: end;
 }
 
 @media screen and (min-width: 768px) {
-  .places__website-item {
+  .place__website-item {
     padding: 0;
   }
 }
