--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,15 +1,14 @@
-.places__item {
+.place {
   margin: 0;
   padding: 0;
   display: grid;
-  align-items: center;
   grid-template-rows: repeat(4, auto);
   grid-template-columns: auto;
   gap: 32px;
 }
 
 @media screen and (min-width: 768px) {
-  .places__item {
+  .place {
     padding: 0;
     display: grid;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
@@ -20,14 +19,14 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .places__item {
+  .place {
     grid-template-columns: 440px 1fr;
     column-gap: 32px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .places__item {
+  .place {
     grid-template-columns: 460px 1fr;
     column-gap: 40px;
   }
