--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/_text/intro__list_text.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__span/intro__span.css);
@@ -22,16 +23,15 @@
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/photo-grid/__img/photo-grid__img.css);
 @import url(../blocks/places/places.css);
-@import url(../blocks/places/__span/places__span.css);
-@import url(../blocks/places/__item/places__item.css);
-@import url(../blocks/places/__image/places__image.css);
-@import url(../blocks/places/__description/places__description.css);
-@import url(../blocks/places/__paragraph/places__paragraph.css);
-@import url(../blocks/places/__title/places__title.css);
-@import url(../blocks/places/__website-item/places__website-item.css);
-@import url(../blocks/places/__website/places__website.css);
-@import url(../blocks/places/__website/_link/places__website_link.css);
-@import url(../blocks/places/__website/_url-heading/places__website_url-heading.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__description/place__description.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__span/place__span.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__website-item/place__website-item.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__item/cover__item.css);
 @import url(../blocks/cover/__title/cover__title.css);
